# Gecco-Discord-Autosend

./: LICENSE  README.md  __init__.py  channellist.py  gecco_autosend.py  gecco_imagesave.py  gecco_selectchannel.py  pyproject.toml  requirements.txt  setup.py
